REMS-Salesforce/force-app/main/default/objects/Program__c/Program__c.object-meta.xml
<CustomObject>
    <description>Each drug is a program under which the patient is enrolled</description>
    <label>Program</label>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>