REMS-Salesforce/force-app/main/default/objects/Program__c/fields/Drug__c.field-meta.xml
<CustomField>
    <fullName>Drug__c</fullName>
    <description>Name of the Drug</description>
    <label>Drug Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>