REMS-Salesforce/force-app/main/default/objects/Program__c/fields/Last_Compliance_Review__c.field-meta.xml
<CustomField>
    <fullName>Last_Compliance_Review__c</fullName>
    <label>Last Compliance Review</label>
    <type>Date</type>
</CustomField>