REMS-Salesforce/force-app/main/default/objects/Program__c/fields/Program_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_Start_Date__c</fullName>
    <description>Launch Date</description>
    <label>Program Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>