REMS-Salesforce/force-app/main/default/objects/Program__c/fields/Program_Status__c.field-meta.xml
<CustomField>
    <fullName>Program_Status__c</fullName>
    <label>Program Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft,</fullName>
            </value>
            <value>
                <fullName>Active,</fullName>
            </value>
            <value>
                <fullName>Inactive,</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>