REMS-Salesforce/force-app/main/default/objects/Program__c/fields/Requires_Patient_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Requires_Patient_Enrollment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Patient Enrollment?</label>
    <type>Checkbox</type>
</CustomField>