REMS-Salesforce/force-app/main/default/objects/Program__c/fields/Requires_Prescriber_Certification__c.field-meta.xml
<CustomField>
    <fullName>Requires_Prescriber_Certification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Prescriber  Certification</label>
    <type>Checkbox</type>
</CustomField>