REMS-Salesforce/force-app/main/default/objects/Program__c/fields/Training_Duration__c.field-meta.xml
<CustomField>
    <fullName>Training_Duration__c</fullName>
    <label>Training Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>